--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@popperjs/core": "^2.5.3",
+    "antd": "^4.7.2",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
     "next": "9.5.5",
+    "popper.js": "^1.16.1",
     "react": "16.14.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "16.14.0"
   }
 }
