--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@popperjs/core": "^2.5.3",
     "antd": "^4.7.2",
+    "antd-button-color": "^1.0.3",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "next": "9.5.5",
     "popper.js": "^1.16.1",
     "react": "16.14.0",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "react-slick": "^0.27.12",
+    "slick-carousel": "^1.8.1"
   }
 }
