--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.14.0",
     "react-slick": "^0.27.12",
+    "react-tiny-fab": "^4.0.1",
     "slick-carousel": "^1.8.1"
   }
 }
