--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.5.3",
     "antd": "^4.7.2",
     "antd-button-color": "^1.0.3",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mustache": "^4.0.1",
     "next": "9.5.5",
+    "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
     "react": "16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "16.14.0",
     "react-slick": "^0.27.12",
     "react-tiny-fab": "^4.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "validator": "^13.1.17"
   }
 }
