update link products

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_SMTP_SERVER=gmail
 NEXT_PUBLIC_SMTP_EMAIL=
 NEXT_PUBLIC_SMTP_PASSWORD=
+NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net1/
+NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/mypru.net
+NEXT_PUBLIC_YOUTUBE=https://www.youtube.com/
