--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.5.3",
-    "antd": "^4.7.2",
+    "antd": "^4.7.3",
     "antd-button-color": "^1.0.3",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
@@ -18,14 +18,14 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mustache": "^4.0.1",
-    "next": "9.5.5",
+    "next": "^10.0.0",
     "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
-    "react": "16.14.0",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "16.14.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
     "react-slick": "^0.27.12",
-    "react-tiny-fab": "^4.0.1",
+    "react-tiny-fab": "^4.0.2",
     "slick-carousel": "^1.8.1",
     "validator": "^13.1.17"
   }
