--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+NEXT_PUBLIC_DOMAIN=http://192.168.18.37:3000/
+
 NEXT_PUBLIC_SMTP_SERVER=gmail
 NEXT_PUBLIC_SMTP_EMAIL=
 NEXT_PUBLIC_SMTP_PASSWORD=
+
 NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net1/
 NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/mypru.net
 NEXT_PUBLIC_YOUTUBE=https://www.youtube.com/
+NEXT_PUBLIC_EMAIL=mypru.net1@gmail.com
+NEXT_PUBLIC_TELEPON=
