--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ NEXT_PUBLIC_SMTP_PASSWORD=
 
 NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net1/
 NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/mypru.net
-NEXT_PUBLIC_YOUTUBE=https://www.youtube.com/
-NEXT_PUBLIC_EMAIL=mypru.net1@gmail.com
+NEXT_PUBLIC_YOUTUBE=https://www.youtube.com/channel/UC7xz6DyWhcSGKY6W0_e3B-Q/videos?view_as=subscriber
+NEXT_PUBLIC_EMAIL=
 NEXT_PUBLIC_TELEPON=
