add facebook pixel

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NEXT_PUBLIC_SMTP_SERVER=gmail
 NEXT_PUBLIC_SMTP_EMAIL=
 NEXT_PUBLIC_SMTP_PASSWORD=
 
+NEXT_PUBLIC_FACEBOOK_PIXEL_ID=
 NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net1/
 NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/mypru.net
 NEXT_PUBLIC_YOUTUBE=https://www.youtube.com/channel/UC7xz6DyWhcSGKY6W0_e3B-Q/videos?view_as=subscriber
