--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.5.1",
     "mustache": "^4.0.1",
     "next": "^10.0.0",
+    "next-fbq": "^2.0.0",
     "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
