--- a/package.json
+++ b/package.json
@@ -3,24 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   },
   "dependencies": {
     "@popperjs/core": "^2.5.3",
     "antd": "^4.7.3",
     "antd-button-color": "^1.0.3",
     "axios": "^0.21.0",
-    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
-    "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "mustache": "^4.0.1",
     "next": "^10.0.0",
     "next-fbq": "^2.0.0",
-    "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
