--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-NEXT_PUBLIC_DOMAIN=http://192.168.18.37:3000/
-NEXT_PUBLIC_API=http://192.168.18.210:5000
+NEXT_PUBLIC_DOMAIN=https://mypru.net/
+NEXT_PUBLIC_API=https://myprunet.herokuapp.com
 
+NEXT_PUBLIC_GA_TRACKING_ID=
 NEXT_PUBLIC_FACEBOOK_PIXEL_ID=
 NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net1/
 NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/mypru.net
