--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ NEXT_PUBLIC_API=https://myprunet.herokuapp.com
 
 NEXT_PUBLIC_GA_TRACKING_ID=
 NEXT_PUBLIC_FACEBOOK_PIXEL_ID=
-NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net1/
-NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/mypru.net
+NEXT_PUBLIC_INSTAGRAM=https://www.instagram.com/mypru.net8/
+NEXT_PUBLIC_FACEBOOK=https://www.facebook.com/myprudential.net
 NEXT_PUBLIC_YOUTUBE=https://www.youtube.com/channel/UC7xz6DyWhcSGKY6W0_e3B-Q/videos?view_as=subscriber
 NEXT_PUBLIC_EMAIL=mypru.net1@gmail.com
 NEXT_PUBLIC_TELEPON=+628194888688
